# easydict-gtk

./: .gitignore  MANIFEST.in  README.md  easydict.glade  easydict.glade~  easydict.py  easydict_first.py  easydict_linux.py  easydict_run.py  easydict_tray.py  handlers.py  html_generator.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  settings.py  setup.py
.github/workflows/: publish-to-test-pypi.yml  release.yml
data/: help_eng.txt  settings.json
easydict/: __init__.py  __main__.py
easydict/garbage/: easydict_run.py
easydict/src/: html_generator.py  orjson_storage.py  settings.py
easydict/ui/: easydict.glade
easydict_gtk/: __init__.py  __main__.py  dialogs.py  easydict.py  easydict_new.py  handlers.py  html_generator.py  orjson_storage.py  settings.py  settings_old.py  tray_menu.py  utils.py  widgets.py
easydict_gtk/backends/: backend.py  sqlite_backend.py  tinydb_backend.py
easydict_gtk/garbage/: easydict_backup.py  easydict_first.py  easydict_run.py  easydict_tray.py  tinydb_try.py  toml_test.py
easydict_gtk/ui/: easydict.glade
easydict_gtk/widgets/: __init__.py  dialogs.py  drop_down.py  front_page.py  menubutton.py  result_list.py  search.py  tray_icon.py
garbage/: easydict_backup.py  tinydb_test.py
gtk4_python/: adw.py  main.py  material.py  widgets.py
src/: easydict.py  handlers.py  html_generator.py  settings.py
tests/: test_settings.py  test_sqlite_backend.py
ui/: easydict.glade
