[tool.poetry]
name = "easydict-gtk"
version = "0.4.1"
description = "The first open source translator which is completely open with dictionary data too."
authors = ["jiri.one <nemec@jiri.one>"]
license = "GPL-3.0-only"
readme = "README.md"
exclude = ["easydict_gtk/garbage"]


[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.38.0"
pycairo = "^1.20.1"
tinydb = "^4.5.2"
orjson = "^3.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
easydict-gtk = 'easydict_gtk.easydict:main'

