[tool.poetry]
name = "easydict-gtk"
description = "The first open source translator which is completely open with dictionary data too."
authors = ["jiri.one <nemec@jiri.one>"]
version = "0" # this value is not used anywhere
license = "GPL-3.0-only"
readme = "README.md"
exclude = ["easydict_gtk/garbage"]


[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.44.0"
pycairo = "^1.23"
tinydb = "^4.5.2"
orjson = "^3.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
easydict-gtk = 'easydict_gtk.easydict:main'

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
pythonpath = "easydict_gtk"
testpaths = "tests"
asyncio_mode = "auto"