[tool.poetry]
name = "easydict-gtk"
description = "The first open source translator which is completely open with dictionary data too."
authors = ["jiri.one <nemec@jiri.one>"]
version = "0.5a"
license = "GPL-3.0-only"
readme = "README.md"
exclude = ["easydict_gtk/garbage"]


[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.46.0"
aiosqlite = "^0.19.0"
easytray = {git = "https://github.com/jiri-one/easytray.git"}

[tool.poetry.group.dev.dependencies]
tinydb = "^4.8.0"
PyGObject-stubs = "^2.10.0"
hupper = "^1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
easydict-gtk = 'easydict_gtk.easydict:main'

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
pythonpath = "easydict_gtk"
testpaths = "tests"
asyncio_mode = "auto"